--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: Arial;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777;
 	background: #777;
 	width: 960px;
@@ -22,22 +22,12 @@ nav {
 	margin-bottom: 10px;
 	border: 1px #ccc solid;
 }
-.container-1 {
-	background: #ebebeb;
-	width: 495px;
-	text-align: center;
-	border: 1px black solid;
-	margin-bottom: 10px;
-	padding: 20px;
-}
 .container-2 {
 	text-align: center;
 	background: #ebebeb;
 	border: 1px #ccc solid;
 	padding: 20px;
-	margin-bottom: 10px;
-	margin-top: 10px;
-	margin-right: 10px;
+	margin-bottom: 10px;	
 	float: left;
 	width: 245px;
 	height: 250px;
@@ -69,10 +59,9 @@ p {
 	border: 1px #ccc solid;
 	padding: 20px;
 	margin-bottom: 10px;
-	margin-left: 10px;
-	margin-top: 10px;
+	margin-left: 10px;	
 	float: left;
-	width: 189px;
+	width: 198px;
 	height: 250px;
 }
 footer {
